# django-terran

./: .gitignore  LICENSES  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
example/: init-database.sh  urls.py
example/signup/: __init__.py  urls.py  views.py
example/signup/templates/signup/: signup.html
example/signup/templates/signup/htmx/: address-country.html  preview.html
example/signup/templates/signup/part/: address-country.html  address-postcode.html  address-settlement.html  address-street-line0.html  address-street-line3.html  bank-account.html  entity.html  organization-name.html  organization.html  person-phone.html
src/example/: init-database.sh  manage.py  settings.py
src/example/signup/: apps.py  views.py
src/example/signup/static/signup/css/: signup.css
src/example/signup/templates/signup/: signup.html
src/example/signup/templates/signup/htmx/: address-level2area.html  entity.html
src/example/signup/templates/signup/part/: address-level1area.html  address-level2area.html  address-street-line1.html  address-street-line2.html  address.html  (+8 more)
src/terran/: __init__.py
src/terran/admin/: __init__.py  _filter.py  currency.py  level1area.py  settlement.py
src/terran/models/: _format.py  level1area.py  level2area.py  settlement.py
terran/: __init__.py  apps.py
terran/admin/: _filter.py  _format.py  country.py  currency.py  level1area.py  level2area.py  settlement.py
terran/migrations/: 0001_initial.py
terran/models/: __init__.py  _format.py  country.py  currency.py  level1area.py  level2area.py  settlement.py
